# gba-sprite-engine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Release.key  TODO.md  test.txt  timespent.csv
AppleADay/: CMakeLists.txt  little House.pyxel  tudor style House.pyxel
AppleADay/src/: main.cpp  start_scene.cpp  start_scene.h
Metroid/: CMakeLists.txt  DomainModel uitleg.txt  README.md  timespent.csv  timespentJan.csv  timespentKyle.csv  to-do_list_C++.txt
Metroid/achtergrond/: AchtergrondLvl1.h  AchtergrondLvl2.h  AchtergrondTransition.h  MapdataLvl1.h  achtergrondIntro.h
Metroid/sound/: SoundFX.h
Metroid/sprites/: samus_aran.h
Metroid/src/: Bullet.cpp  Bullet.h  DeadScene.cpp  DeadScene.h  Enemy.cpp  Enemy.h  IntroScene.cpp  IntroScene.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  MapdataLvl2.h  Mario.cpp  Mario.h  MarioBullet.cpp  MarioBullet.h  Metroid.cpp  Metroid.h  OvergangScene1.cpp  OvergangScene1.h  SoundDeath.h  SoundFX2.h  SoundVictory.h  Transition.cpp  Transition.h  VictoryScene.cpp  VictoryScene.h  achtergrond.h  achtergrond2.h  achtergrond3.h  achtergrondDataLvl2.h  achtergrondVictory.h  ball.h  enemy.h  main.cpp  menu.cpp  menu.h  projectiel.h  sample_sound.h  (+2 more)
avatar_the_last_airbender/: CMakeLists.txt  README.md  VanRompaeyWouter_timespent.csv  VancoppenolleCharles_timespent.csv  timespent.csv
avatar_the_last_airbender/img/aang_jump_old/: aang_jump-20191205-143518.piskel
avatar_the_last_airbender/img/background_game/: background.piskel
avatar_the_last_airbender/img/enemy sprite/: run_enemy_without.piskel  run_enemy_withshadow-20191221-232657.piskel  run_enemy_withshadow.c  run_enemy_withshadow.h
avatar_the_last_airbender/img/sprite_aang/: aang_down6432.piskel  aang_up6432.piskel  airball16.piskel  extra_healthbaraang3216.piskel  piskel.piskel
avatar_the_last_airbender/img/sprite_enemy/: air_set_16-20191227-170758.piskel  enemy.piskel  enemy3264.piskel  enemy64.piskel  enemy_32-20191227-110348.piskel  extra_healthbarenemy.piskel
avatar_the_last_airbender/src/: Aang.cpp  Aang.h  AirBall.cpp  AirBall.h  End_scene.cpp  End_scene.h  Enemy.cpp  Enemy.h  Level1_scene.cpp  Level1_scene.h  Scene_End.cpp  Scene_End.h  Scene_Level1.cpp  Scene_Level1.h  Scene_Level2.cpp  Scene_Level2.h  Scene_Start.cpp  Scene_Start.h  Titlescreen_scene.cpp  Titlescreen_scene.h  aang_jump (1).c  aang_jump (1).h  background_earth_data.h  background_earth_tilemap.h  background_water.h  level1_scene.cpp  level1_scene.h  main.cpp  titlescreen.h  white_background.h
avatar_the_last_airbender/src/aang/: aang.h
avatar_the_last_airbender/src/aang_jump_old/: aang_jump (1).h  aang_jump2.h
avatar_the_last_airbender/src/background_game/: background1_map.h  background1_set.h  background2_set.h  background3_map.h  background3_set.h  background_map.h  background_pal.h  background_set.h  background_tilemap.h  background_tileset.h
avatar_the_last_airbender/src/enemy/: enemy.h  (+1 more)
demos/demo1-basicfeatures/: CMakeLists.txt
demos/demo2-arkanoid/: CMakeLists.txt  dead.raw  pats.raw
demos/demo3-foodthrowing/: CMakeLists.txt
demos/demo4-conway/: CMakeLists.txt  conway.h
engine/: CMakeLists.txt
engine/src/: allocator.cpp  gba_engine.cpp  gbavector.cpp  math.cpp  scene.cpp  sound_control.cpp  timer.cpp
game/: CMakeLists.txt  ChooseCharachter_Screen.cpp  ChooseCharachter_Screen.h  ChooseCharachterscreen.h  ChooseCharacter_Screen.cpp  ChooseCharacter_Screen.h  Game.cpp  Game.h  Game_Room.h  Sprites_Data.h  Start_Screen.cpp  Start_Screen.h  Startscreen.cpp  Startscreen.h  bokman.c  bokman.h  dancingmichman.c  dancingmichman.h  jägerman.c  jägerman.h  main.cpp  safman.c  safman.h  shared.c  shared.h  woordvoerderman.c  woordvoerderman.h
game/Background/: GameScene.h
partyGame/: About.cpp  About.h  CMakeLists.txt  MainMenu.cpp  MainMenu.h  boardScreen.cpp  boardScreen.h  main.cpp  screen.h  testtest.h
partyGame/Sprites/: alleKleuren.c  alleKleuren.h  blue_stone_with_border.c  blue_stone_with_border.h  box.c  box.h  dobbelsteen.c  dobbelsteen.h  pijl.c  redEnemyCenter.h  red_stone_with_border.c  shared.c  wit_spook_1.c  wit_spook_2.c  wit_spook_2.h
partyGame/backgrounds/: Background8x8Map.h  Tiles8x8.c  Tiles8x8.h  blackAndTransparantMap.h  bord.c  bord.h  eerste7x7Map.h  gameScreenBorder.h  gameScreenFull.c  gameScreenFull.h  gameScreenMap.h  gras.h  grasBackground.h  gunshot.h  map.h  red_green.c  red_green.h  red_green4.c  red_green4.h  shared10_08.c  shared10_08.h  testtest2.h  tiles.c  tiles.h  tiles10_08.c  tiles10_08.h  tiles12_08.c  tiles12_08.h  tilesMetRand.c  tilesMetRand.h  tilesMetRandMap.h  tilesNummers.c  tilesNummers.h  transparantAndRedMap.h
partyGame/doc/: Remarks
partyGame/img/: basketballAnimated.c  basketballAnimated.h  hoofdpersonage.c  hoofdpersonage.h  minion_image.h  shared.c  shared.h  speler1.c  speler1.h  spelerAI.c  spelerAI.h  stickmanAnimated.c  stickmanAnimated.h
partyGame/screens/: AboutScreen.cpp  AboutScreen.h  EndScreen.cpp  EndScreen.h  GameScreen.cpp  GameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Minigame1Screen.cpp  Minigame1Screen.h  Minigame2Screen.cpp  Minigame2Screen.h  Minigame3Screen.cpp  Minigame3Screen.h  MinigameScreen.cpp  MinigameScreen.h  PlayerSelectScreen.cpp  VangspelScreen.cpp  VangspelScreen.h  boardScreen.cpp  boardScreen.h  testScreen1.cpp  testScreen1.h  testScreen2.cpp  testScreen2.h
partyGame/sound/: firstLaugh.h  scream1.h  scream2.h  scream3.h  secondLaugh.h  thirdLaugh.h  win.raw
partyGame/sprites/: blueEnemyCenter.c  blueEnemyCenter.h  greenEnemyCenter.c  greenEnemyCenter.h  green_stone_with_border.c  green_stone_with_border.h  pijl.h  redEnemyCenter.c  red_stone_with_border.h  shared.h  wit_spook_1.h
partyGame/src/: Bord.cpp  Bord.h  Game.cpp  Game.h  Minigame.cpp  Minigame.h  Minigame3.cpp  Minigame3.h  Test.cpp  Test.h  Vakje.cpp  Vakje.h  controller.cpp  controller.h  main.cpp
test/: CMakeLists.txt  allocatortest.cpp  backgroundtest.cpp  gbatest.cpp  gbavectortest.cpp  maintest.cpp  mathtest.cpp  palettetest.cpp  real_data.h  scenetest.cpp  spritetest.cpp  timertest.cpp
(+238 files in other folders)
